src/objects/DynamicPickList__c.object
<CustomObject>
    <fields>
        <fullName>HACCRegion__c</fullName>
        <label>HACC Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncGST__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Inc GST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PickListCategory__c</fullName>
        <label>PickListCategory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NSW</fullName>
                </value>
                <value>
                    <fullName>ACT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PickListSubCategory__c</fullName>
        <label>PickListSubCategory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HACC</fullName>
                </value>
                <value>
                    <fullName>ACAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PickListValue__c</fullName>
        <label>PickListValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DynamicPickList</label>
    <nameField>
        <displayFormat>DPL-{000000}</displayFormat>
        <label>DynamicPickList Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DynamicPickLists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>